--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="/#"><img id="logo" src="images/logo-cropped.gif"></a>
       <div id="top" class="section star-background wf-section">
          <div class="header w-container">
-            <div class="w-layout-grid grid-header">
+            <div class="w-layout-grid grid-header hide-on-mobile">
                <a href="#about" class="link w-inline-block">
                   <div class="header-menu">ABOUT</div>
                </a>
@@ -55,6 +55,27 @@
                <a href="/fusion.html" class="link w-inline-block">
                   <div class="header-menu">FUSION</div>
                </a>
+            </div>
+            <div class="hide-on-desktop">
+               <div style="text-align: center;">
+                  <a href="/#about" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ABOUT</div>
+                  </a>
+                  <a href="/#team" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">TEAM</div>
+                  </a>
+                  <a href="/#roadmap" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ROADMAP</div>
+                  </a>
+               </div>
+               <div style="text-align: center;">
+                  <a href="/plasma.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">PLASMA</div>
+                  </a>
+                  <a href="/fusion.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">FUSION</div>
+                  </a>
+               </div>
             </div>
          </div>
       </div>
@@ -122,7 +143,7 @@
                   <p>- 5 Legendary Yetis were minted randomly, 5 were auctioned and transferred to a community wallet for future events and development of the project.</p>
                   <p>- See Legendary Yetis on <a href="https://opensea.io/collection/space-yetis-official?search[sortAscending]=true&search[sortBy]=PRICE&search[stringTraits][0][name]=LEGENDARY&search[stringTraits][0][values][0]=Pepe%20Yeti&search[stringTraits][0][values][1]=Monkey%20King%20Yeti&search[stringTraits][0][values][2]=Mecha%20Yeti&search[stringTraits][0][values][3]=Custom%20Yeti%202&search[stringTraits][0][values][4]=Custom%20Yeti%201&search[stringTraits][0][values][5]=Chewbacca%20Yeti&search[stringTraits][0][values][6]=Celestial%20Yeti&search[stringTraits][0][values][7]=Astro%20Yeti&search[stringTraits][0][values][8]=Alien%20Yeti&search[stringTraits][0][values][9]=Alpha%20Yeti" style="color: #0FFEF2" target="_blank" class="link">OpenSea⬈</a></p>
                   <br>
-                  <h2 class="body-heading"><span class="one">></span><span class="two">></span><span class="three">></span> Phase 1: Release of $PLASMA</h2>
+                  <h2 class="body-heading">Phase 1: Release of $PLASMA</h2>
                   <br>
                   <p>- $PLASMA is the utility token within the Space Yeti ecosystem.</p>
                   <p>- Token will be generated passively without needing to stake and will be used for future mints.</p>
@@ -135,7 +156,7 @@
                   <p>- Space Yetis will purchase plots of land in the Sandbox for future use and utility.</p>
                   <p>- Development of Space Yetis VX begins.</p>
                   <br>
-                  <h2 class="body-heading">Phase 3: Super Yeti Fusion - Cyborg</h2> 
+                  <h2 class="body-heading"><span class="one">></span><span class="two">></span><span class="three">></span> Phase 3: Super Yeti Fusion - Cyborg</h2> 
                   <br>
                   <p>- Super Yeti fusion using 2 Space Yetis (Does not burn Genesis).</p>
                   <p>- 650 $PLASMA needed for fusion.</p>
