--- a/plasma.html
+++ b/plasma.html
@@ -30,7 +30,7 @@
       <span class="hide-on-mobile"><a id="account" href="#" class="button connect-button w-node-_7bf6e2c3-029b-2b2d-f2d4-ec4f2625100b-9b44e08e w-button" onclick=connect()>Connect Wallet</a></span>
       <div id="top" class="section star-background wf-section">
          <div class="header w-container">
-            <div class="w-layout-grid grid-header">
+            <div class="w-layout-grid grid-header hide-on-mobile">
                <a href="/#about" class="link w-inline-block">
                   <div class="header-menu">ABOUT</div>
                </a>
@@ -46,6 +46,27 @@
                <a href="/fusion.html" class="link w-inline-block">
                   <div class="header-menu">FUSION</div>
                </a>
+            </div>
+            <div class="hide-on-desktop">
+               <div style="text-align: center;">
+                  <a href="/#about" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ABOUT</div>
+                  </a>
+                  <a href="/#team" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">TEAM</div>
+                  </a>
+                  <a href="/#roadmap" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ROADMAP</div>
+                  </a>
+               </div>
+               <div style="text-align: center;">
+                  <a href="/plasma.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">PLASMA</div>
+                  </a>
+                  <a href="/fusion.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">FUSION</div>
+                  </a>
+               </div>
             </div>
             <span class="hide-on-desktop" style="text-align: center;">
                <a id="mobile-account" href="#" class="button connect-button w-node-_7bf6e2c3-029b-2b2d-f2d4-ec4f2625100b-9b44e08e w-button" onclick=connect()>Connect Wallet</a>
