--- a/fusion.html
+++ b/fusion.html
@@ -20,6 +20,7 @@
       <link href="css/normalize.css" rel="stylesheet" type="text/css">
       <link href="css/webflow.css" rel="stylesheet" type="text/css">
       <link href="css/yetis.webflow.css" rel="stylesheet" type="text/css">
+      <link href="css/plasma.css" rel="stylesheet" type="text/css">
       <link href="css/fusion.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -30,7 +31,7 @@
       <span class="hide-on-mobile"><a id="account" href="#" class="button connect-button w-node-_7bf6e2c3-029b-2b2d-f2d4-ec4f2625100b-9b44e08e w-button" onclick=connect()>Connect Wallet</a></span>
       <div id="top" class="section star-background wf-section">
          <div class="header w-container">
-            <div class="w-layout-grid grid-header">
+            <div class="w-layout-grid grid-header hide-on-mobile">
                <a href="/#about" class="link w-inline-block">
                   <div class="header-menu">ABOUT</div>
                </a>
@@ -47,6 +48,27 @@
                   <div class="header-menu">FUSION</div>
                </a>
             </div>
+            <div class="hide-on-desktop">
+               <div style="text-align: center;">
+                  <a href="/#about" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ABOUT</div>
+                  </a>
+                  <a href="/#team" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">TEAM</div>
+                  </a>
+                  <a href="/#roadmap" class="link w-inline-block" style="width: 30%;">
+                     <div class="header-menu">ROADMAP</div>
+                  </a>
+               </div>
+               <div style="text-align: center;">
+                  <a href="/plasma.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">PLASMA</div>
+                  </a>
+                  <a href="/fusion.html" class="link w-inline-block" style="width: 35%;">
+                     <div class="header-menu">FUSION</div>
+                  </a>
+               </div>
+            </div>
             <span class="hide-on-desktop" style="text-align: center;">
                <a id="mobile-account" href="#" class="button connect-button w-node-_7bf6e2c3-029b-2b2d-f2d4-ec4f2625100b-9b44e08e w-button" onclick=connect()>Connect Wallet</a>
             </span>
@@ -55,50 +77,43 @@
       <h1 style="text-align: center;">FUSION REACTOR</h1>
       <p id="fusion-description"> Fuse two Space Yetis to create a powerful Cyborg! 
          650 $PLASMA will be spent from your wallet and burned by fusion. Your Cyborg will be minted to your wallet.
-         Yetis used for fusion are not burned and will remain intact in your wallet.
+         Yetis used for fusion are not burned and will remain in your wallet.
       </p>
       <br>
-      <div id="your-dragon-section" class="container box3">
+      <div id="fusion-section" class="container box3">
          <br class="hide-on-desktop">
          <h1 class="hide-on-mobile" id="fusion-header"><span id="fusion-header-text">FUSE-O-TRON 3000</span></h1>
          <h2 class="hide-on-desktop" id="fusion-header"><span id="fusion-header-text">FUSE-O-TRON 3000</span></h2>
          <br class="hide-on-desktop">
-         <div id="your-dragon-section-inner">
-            <div id="tributes">
-               <div class="tribute" id="burn-1">
+         <div id="fusion-section-inner">
+            <div id="subjects">
+               <div class="subject" id="subject-1">
                   <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
                </div>
-               <div class="tribute" id="burn-2">
+               <div class="subject" id="subject-2">
                   <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
                </div>
-               <button id="select-tributes-button" class="button" onclick="displayDragonSelect()">SELECT SUBJECTS</button>
+               <button id="select-subjects-button" class="button" onclick="displayYetiSelect()">SELECT SUBJECTS</button>
             </div>
             <div id="fusion-controls">
                <div style="position: relative;">
                   <div id="fusion-display" class="crt">
                      <h2>YOUR $PLASMA:</h2>
-                     <h2>650</h2>
+                     <h2 id="your-plasma">-</h2>
                      <h2>$PLASMA COST:</h2>
                      <h2>650</h2>   
                   </div>            
                </div>
-   
-   
-   
-               <!-- <h2>READY TO FUSE?</h2>
-               <p id="fusion-description-2" style="padding-top:.5vw"> </p>
-               <h2>Balance: <span id="your-scale"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span> <img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2>
-               <h2>Cost: 650</span> <img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2> -->
                <div id="fusion-panel">
                   <div class="indicator"> 
                      <p>Plasma</p>
-                     <button>O</button>
+                     <button class="condition-failed" id="plasma-status">0</button>
                   </div>
                   <div class="indicator"> 
                      <p>Subjects</p>
-                     <button>O</button>
+                     <button class="condition-failed" id="subject-status">O</button>
                   </div>
-                  <button id="burn-button" class="button" onclick="burn()">FUSE</button>
+                  <button id="fuse-button" class="button" onclick="fuse()">FUSE</button>
                </div>
             </div>
          </div>
@@ -106,9 +121,9 @@
 
       <br>
       <h1 style="text-align: center;">YOUR CYBORGS</h1>
-      <div id="your-elder-dragon-section" class="container box3">
-         <h2 id="elder-label" class="hidden">Cyborgs <span id="num-elders">(<span class="one">.</span><span class="two">.</span><span class="three">.</span>)</span></h2>
-         <div id="available-elder-images" style="margin-top:0;width:100%;">
+      <div id="your-cyborg-section" class="container box3">
+         <h2 id="cyborg-label" class="hidden">Cyborgs <span id="num-cyborgs">(<span class="one">.</span><span class="two">.</span><span class="three">.</span>)</span></h2>
+         <div id="available-cyborg-images" style="margin-top:0;width:100%;">
             <h3>Scanning for Cyborgs <span class="one">.</span><span class="two">.</span><span class="three">.</span></h3>
          </div>
       </div>
@@ -145,6 +160,6 @@
          src="https://cdn-cors.ethers.io/lib/ethers-5.5.1.umd.min.js"></script>
       <script src="./scripts/timer-public.js"></script>
       <script type="text/javascript" src="scripts/utils.js" defer></script> 
-      <script type="text/javascript" src="scripts/plasma.js" defer></script> 
+      <script type="text/javascript" src="scripts/fusion.js" defer></script> 
    </body>
 </html>
